Remove index.json and use manifests list

--- a/site/index.html
+++ b/site/index.html
@@ -42,6 +42,8 @@
             <h3>Devices</h3>
             <button class="link" data-clear="device" type="button">Clear</button>
           </div>
+          <div class="sub-label">Brand</div>
+          <div class="chip-row" id="brand-chips"></div>
           <div class="chip-row" id="device-chips"></div>
           <div class="device-search">
             <input id="device-search" list="device-list" placeholder="More devices">
