Rename site to Entertain Humans

--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Firmware Market</title>
+    <title>Entertain Humans</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -12,8 +12,8 @@
       <div class="brand">
         <div class="brand-mark">FM</div>
         <div class="brand-text">
-          <div class="brand-name">Firmware Market</div>
-          <div class="brand-tag">Store-like discovery for verified firmware</div>
+          <div class="brand-name">Entertain Humans</div>
+          <div class="brand-tag">Firmware generated for human amusement.</div>
         </div>
       </div>
       <div class="header-search">
