--- a/site/flash.html
+++ b/site/flash.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Web Flash</title>
+    <title>Entertain Humans · Web Flash</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="bg-orbit"></div>
     <header class="site-header">
       <nav class="nav">
-        <div class="logo">Firmware Market</div>
+        <div class="logo">Entertain Humans</div>
         <div class="nav-links">
           <a href="index.html">Back to catalog</a>
           <a href="docs/flash.md">CLI guide</a>
