Load esptool-js as module for Web Flash

--- a/site/flash.html
+++ b/site/flash.html
@@ -93,10 +93,10 @@
       </section>
     </main>
 
-    <script src="vendor/esptool-js/esptool.min.js"></script>
     <script type="importmap">
       {
         "imports": {
+          "esptool-js": "./vendor/esptool-js/esptool.min.js",
           "dfu": "./vendor/webdfu/index.js",
           "nanoevents": "./vendor/webdfu/nanoevents.js"
         }
