--- a/site/flash.html
+++ b/site/flash.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Entertain Humans · Web Flash</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=20260203">
   </head>
   <body>
     <div class="bg-orbit"></div>
@@ -102,7 +102,7 @@
         }
       }
     </script>
-    <script type="module" src="vendor/flashers.js"></script>
-    <script src="flash.js"></script>
+    <script type="module" src="vendor/flashers.js?v=20260203"></script>
+    <script src="flash.js?v=20260203"></script>
   </body>
 </html>
