feat: 0.1.5-alpha trail-mate

--- a/site/index.html
+++ b/site/index.html
@@ -83,8 +83,8 @@
             <button class="link" data-clear="release" type="button">Clear</button>
           </div>
           <div class="radio-stack">
-            <label><input type="radio" name="channel" value="" checked> All releases</label>
-            <label><input type="radio" name="channel" value="latest"> Latest only</label>
+            <label><input type="radio" name="channel" value=""> All releases</label>
+            <label><input type="radio" name="channel" value="latest" checked> Latest only</label>
             <label><input type="radio" name="channel" value="stable"> Stable</label>
             <label><input type="radio" name="channel" value="preview"> Preview</label>
           </div>
